force-app/main/default/objects/Event_Tabs__c/Event_Tabs__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - Child object of Event Setting. Defines the different tabs and tab properties for a particular event.</description>
    <label>Event Tab</label>
    <nameField>
        <displayFormat>ET-{0000000}</displayFormat>
        <label>Event Tabs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Tabs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>