force-app/main/default/objects/Event_Tabs__c/fields/Event_Setting__c.field-meta.xml
<CustomField>
    <fullName>Event_Setting__c</fullName>
    <description>Event setting for which this tabs belongs to.</description>
    <inlineHelpText>Event Setting, this Tab Belongs to</inlineHelpText>
    <label>Event Setting</label>
    <referenceTo>Event_Setting__c</referenceTo>
    <relationshipLabel>Event Tabs</relationshipLabel>
    <relationshipName>Event_Tabs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>