force-app/main/default/objects/Event_Tabs__c/fields/ExtTabId__c.field-meta.xml
<CustomField>
    <fullName>ExtTabId__c</fullName>
    <label>External Tab Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>