force-app/main/default/objects/Event_Tabs__c/fields/Floorplan_Blank_Msg__c.field-meta.xml
<CustomField>
    <fullName>Floorplan_Blank_Msg__c</fullName>
    <description>Ops Admin can add any message to show to customers when there is no booth available</description>
    <label>Floorplan Blank Msg</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>