force-app/main/default/objects/Event_Tabs__c/fields/Floorplan_Type__c.field-meta.xml
<CustomField>
    <fullName>Floorplan_Type__c</fullName>
    <description>Floorplan Type Picklist, which is required if Standard tab type is Floorplan</description>
    <label>Floorplan Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Standard_Tab_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interactive</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>