force-app/main/default/objects/Event_Tabs__c/fields/HTML_Content__c.field-meta.xml
<CustomField>
    <fullName>HTML_Content__c</fullName>
    <description>Stores Value from CK Editor</description>
    <inlineHelpText>Use Custom HTML Content Button to provide value in this field.</inlineHelpText>
    <label>HTML Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>