force-app/main/default/objects/Event_Tabs__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <description>Salesforce icon name list,
There are three icons type support utility, standard and custom. If you want to add check icon then you can use &quot;utility:add&quot;.
Icon reference https://www.lightningdesignsystem.com/icons/</description>
    <inlineHelpText>It will show different Icon in Customer Center.</inlineHelpText>
    <label>Icon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>utility:company</fullName>
                <label>Account</label>
            </value>
            <value>
                <fullName>utility:checkin</fullName>
                <label>Address</label>
            </value>
            <value>
                <fullName>utility:news</fullName>
                <label>Article</label>
            </value>
            <value>
                <fullName>utility:user</fullName>
                <label>Avatar</label>
            </value>
            <value>
                <fullName>utility:email</fullName>
                <label>Email</label>
            </value>
            <value>
                <fullName>utility:page</fullName>
                <label>Document</label>
            </value>
            <value>
                <fullName>utility:education</fullName>
                <label>Education</label>
            </value>
            <value>
                <fullName>utility:event</fullName>
                <label>Event</label>
            </value>
            <value>
                <fullName>utility:file</fullName>
                <label>File</label>
            </value>
            <value>
                <fullName>utility:form</fullName>
                <label>Form</label>
            </value>
            <value>
                <fullName>utility:location</fullName>
                <label>Location</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>