force-app/main/default/objects/Event_Tabs__c/fields/Is_Tab_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Tab_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Depending on this status it will be displayed on community page but will be grayed out until it is Tab Visible Checkbox is checked</description>
    <label>Is Tab Active</label>
    <type>Checkbox</type>
</CustomField>