force-app/main/default/objects/Event_Tabs__c/fields/Is_Tab_Visible__c.field-meta.xml
<CustomField>
    <fullName>Is_Tab_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Makes the Tab Visible on the Customer Center</description>
    <label>Is Tab Visible</label>
    <type>Checkbox</type>
</CustomField>