force-app/main/default/objects/Event_Tabs__c/fields/Layout_Type__c.field-meta.xml
<CustomField>
    <fullName>Layout_Type__c</fullName>
    <description>Defines the type of layout like - 3 Column, Header and 2 Column, Header and 3 Column</description>
    <label>Layout Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 Column</fullName>
            </value>
            <value>
                <fullName>Header and 2 Column</fullName>
            </value>
            <value>
                <fullName>Header and 3 Column</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>