force-app/main/default/objects/Event_Tabs__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Standard_Tab_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Customer_Center_Roles</valueSetName>
    </valueSet>
</CustomField>