force-app/main/default/objects/Event_Tabs__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Used to sort the Event tabs</description>
    <inlineHelpText>Sequence of the Tab in Customer Center</inlineHelpText>
    <label>Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>