force-app/main/default/objects/Event_Tabs__c/fields/Standard_Tab_Type__c.field-meta.xml
<CustomField>
    <fullName>Standard_Tab_Type__c</fullName>
    <description>Defines the Standard Tab Type when Tab Type is choosen as standard.</description>
    <label>Tab Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tab_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Floorplan</fullName>
            </value>
            <value>
                <fullName>FAQ</fullName>
            </value>
            <value>
                <fullName>Forms</fullName>
            </value>
            <value>
                <fullName>Manuals</fullName>
            </value>
            <value>
                <fullName>Stand Design</fullName>
            </value>
            <value>
                <fullName>Stand Contractors</fullName>
            </value>
            <value>
                <fullName>Heavy Machinery</fullName>
            </value>
            <value>
                <fullName>Lead Retrieval</fullName>
            </value>
            <value>
                <fullName>Virtual Event</fullName>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
            <value>
                <fullName>Badge Registration</fullName>
            </value>
            <value>
                <fullName>Manage Team</fullName>
            </value>
            <value>
                <fullName>Badge/Registrations</fullName>
                <isActive>false</isActive>
                <label>Badge/Registrations</label>
            </value>
            <value>
                <fullName>Badges</fullName>
                <isActive>false</isActive>
                <label>Badges</label>
            </value>
            <value>
                <fullName>Manage My Task</fullName>
                <isActive>false</isActive>
                <label>Manage My Task</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>