force-app/main/default/objects/Event_Tabs__c/fields/SumPublishedNumber__c.field-meta.xml
<CustomField>
    <fullName>SumPublishedNumber__c</fullName>
    <description>This field will be used to sum up all the publish numbers of a related event tab</description>
    <label>SumPublishedNumber</label>
    <summarizedField>Tab_Context__c.Last_Published_Number__c</summarizedField>
    <summaryForeignKey>Tab_Context__c.Event_Tab__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>