force-app/main/default/objects/Event_Tabs__c/fields/Tab_Code__c.field-meta.xml
<CustomField>
    <fullName>Tab_Code__c</fullName>
    <displayFormat>T-{0000}</displayFormat>
    <label>Tab Code</label>
    <type>AutoNumber</type>
</CustomField>