force-app/main/default/objects/Event_Tabs__c/fields/Tab_Group__c.field-meta.xml
<CustomField>
    <fullName>Tab_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Tab Group Object to add tab menu on community portal.</description>
    <inlineHelpText>Defines Tab menu on community portal under which your Event Tab will be shown</inlineHelpText>
    <label>Tab Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Tab_Group__c.Type__c</field>
            <operation>equals</operation>
            <value>Multiple</value>
        </filterItems>
        <filterItems>
            <field>Tab_Group__c.Display_Always__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Tab_Group__c</referenceTo>
    <relationshipLabel>Event Tabs</relationshipLabel>
    <relationshipName>Event_Tabs</relationshipName>
    <type>Lookup</type>
</CustomField>