force-app/main/default/objects/Event_Tabs__c/fields/Tab_Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Tab_Subtitle__c</fullName>
    <description>First Text inside the tab</description>
    <label>Tab Subtitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>