force-app/main/default/objects/Event_Tabs__c/fields/Tab_Title__c.field-meta.xml
<CustomField>
    <fullName>Tab_Title__c</fullName>
    <description>Tab title defines Home, Badge, Forms, Manual</description>
    <label>Tab Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>