force-app/main/default/objects/Event_Tabs__c/fields/Tab_Type__c.field-meta.xml
<CustomField>
    <fullName>Tab_Type__c</fullName>
    <description>Defines the different types of tabs like Standard, Custom</description>
    <label>Tab Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>