force-app/main/default/objects/Event_Tabs__c/validationRules/Floorplan_type_is_mandate_for_Floorplan.validationRule-meta.xml
<ValidationRule>
    <fullName>Floorplan_type_is_mandate_for_Floorplan</fullName>
    <active>true</active>
    <description>To make floorplan type manadatory when the user selects standard tab type as floorplan</description>
    <errorConditionFormula>AND( ISPICKVAL( Standard_Tab_Type__c , &apos;Floorplan&apos;) , ISPICKVAL( Floorplan_Type__c , &apos;&apos;))</errorConditionFormula>
    <errorDisplayField>Floorplan_Type__c</errorDisplayField>
    <errorMessage>Please select Floorplan Type, as Floorplan Type is mandatory field when Standard Tab Type is Floorplan</errorMessage>
</ValidationRule>