force-app/main/default/objects/Event_Tabs__c/validationRules/Standard_t_type_is_mandate_for_TabType.validationRule-meta.xml
<ValidationRule>
    <fullName>Standard_t_type_is_mandate_for_TabType</fullName>
    <active>true</active>
    <description>To make Standard tab type mandatory when the user selects tab type as standard</description>
    <errorConditionFormula>AND( ISPICKVAL(  Tab_Type__c , &apos;Standard&apos;) , ISPICKVAL(  Standard_Tab_Type__c , &apos;&apos;))</errorConditionFormula>
    <errorDisplayField>Standard_Tab_Type__c</errorDisplayField>
    <errorMessage>Please select Standard Tab Type, as Standard Tab Type is mandatory field when Tab Type is Standard</errorMessage>
</ValidationRule>