force-app/main/default/objects/Event_Tabs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Setting__c</columns>
    <columns>Floorplan_Type__c</columns>
    <columns>Is_Tab_Active__c</columns>
    <columns>Is_Tab_Visible__c</columns>
    <columns>Tab_Type__c</columns>
    <columns>Standard_Tab_Type__c</columns>
    <columns>Tab_Title__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>